# python-stock-trading-platform

./: .gitignore  README.md  pyproject.toml  setup.py
beasttrader/: __init__.py  automated_dicky_fuller.py  backtest.py  backtest_tools.py  base.py  evaluate_live_trading_performance.py  exchange.py  indicators.py  live.py  market_data.py  orders.py  performance_analysis.py  polygon_io.py  strategy.py  util.py  visualizations.py
beasttrader/my_td_ameritrade/: td_ameritrade_exchange.py
beasttrader/test/: performance_analysis.py
examples/: data_quality_analysis.py  hyperparameter_optimization.py  openai_gym.py  simple_backtest.py  view_data_with_indicators.py
examples/strategies/: hello_world_strategies.py  two_ema_cross.py
experiments/: concurrency_of_agents_within_sim.py  concurrency_of_sims.py
parallelized_algorithmic_trader/: __init__.py  backtest.py  base.py  broker.py  evaluate_live_trading_performance.py  indicators.py  live.py  load_account_history.py  market_data.py  orders.py  performance_analysis.py  polygon_io.py  strategy.py  util.py  visualizations.py
parallelized_algorithmic_trader/data_management/: alpaca_data.py  data.py  data_utils.py  market_data.py  polygon_io.py
parallelized_algorithmic_trader/td_ameritrade_wrapper/: td_ameritrade_brokerage.py
parallelized_algorithmic_trader/trading/: alpaca_broker.py  gym_wrapper.py  simulated_broker.py
scripts/: bulk_fetch_data.py  delete_all_local_data.py
tests/: performance_analysis_test.py  polygon_options_dev.py  td_ameritrade_test.py  validate_order_flow_test.py
